--- a/packages/opencode/tsconfig.json
+++ b/packages/opencode/tsconfig.json
@@ -4,7 +4,7 @@
   "compilerOptions": {
     "jsx": "preserve",
     "jsxImportSource": "@opentui/solid",
-    "lib": ["ESNext", "DOM.Iterable"],
+    "lib": ["ESNext", "DOM", "DOM.Iterable"],
     "customConditions": ["development", "browser"]
   }
 }
