--- a/packages/opencode/package.json
+++ b/packages/opencode/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "typecheck": "tsc --moduleResolution bundler --customConditions development --customConditions browser --noEmit",
+    "typecheck": "tsc --noEmit",
     "dev": "bun run --conditions=development --conditions=browser ./src/index.ts",
     "build": "./script/build.ts"
   },
