--- a/packages/opencode/package.json
+++ b/packages/opencode/package.json
@@ -50,8 +50,8 @@
     "@opencode-ai/plugin": "workspace:*",
     "@opencode-ai/script": "workspace:*",
     "@opencode-ai/sdk": "workspace:*",
-    "@opentui/core": "0.0.0-20251010-2eed09fd",
-    "@opentui/solid": "0.0.0-20251010-2eed09fd",
+    "@opentui/core": "0.1.29",
+    "@opentui/solid": "0.1.29",
     "@parcel/watcher": "2.5.1",
     "@solid-primitives/event-bus": "1.1.2",
     "@standard-schema/spec": "1.0.0",
